<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.test.zebrascanner.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txt_no_scanners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Scanner Connected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_scanner_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@android:color/white"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/titleModel"
                    android:layout_marginLeft="18dp"
                    android:layout_height="match_parent"
                    android:text="@string/model" />

                <TextView
                    android:id="@+id/txtModel"
                    android:layout_height="match_parent"
                    android:layout_marginRight="18dp"
                    android:text=""/>

            </TableRow>

            <include layout="@layout/normal_divider" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@android:color/white" >

                <TextView
                    android:id="@+id/titleSerial"
                    android:layout_marginLeft="18dp"
                    android:layout_height="match_parent"
                    android:text="@string/serial" />

                <TextView
                    android:id="@+id/txtSerial"
                    android:layout_height="match_parent"
                    android:layout_marginRight="18dp"
                    android:text=""/>

            </TableRow>
            <include layout="@layout/normal_divider" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/white" >

                <Button
                    android:id="@+id/disable"
                    android:layout_marginLeft="18dp"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/disable"
                    android:onClick="disableScanner"/>

                <Button
                    android:id="@+id/enable"
                    android:layout_marginLeft="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/enable"
                    android:onClick="enableScanner"/>

                <Button
                    android:id="@+id/beep"
                    android:layout_marginLeft="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/beep"
                    android:onClick="beepScanner"/>

            </TableRow>
            <include layout="@layout/normal_divider" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_scan_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view_barcodes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_scan_data"
            android:layout_row="1"
            android:layout_column="1"
            android:editable="false"
            android:includeFontPadding="false"
            android:padding="10dp"
            android:maxLines = "10000"
            android:scrollbars = "vertical"
            android:background="#ffe0e2e4"
            />
    </ScrollView>
</LinearLayout>
